--- a/tailwind/base.css
+++ b/tailwind/base.css
@@ -135,7 +135,7 @@
 /* Always load modal styles as well as navbar styles */
 .nav-sidebar-menu{
     transform: translateX(100%);
-    transition: transform 600ms ease-out;
+    transition: transform 600ms ease-in;
 }
 
 .nav-sidebar-menu-open {
